# software-development-by-example

./: 0-intro.txt  1-linux.txt  LICENSE  README.md
examples/: README.md
examples/project-0/: README.md
examples/project-1/: README.md  code.cpp
examples/project-2/: README.md  baz.cpp  code.cpp
examples/project-3/: README.md
examples/project-3/src/: baz.cpp  code.cpp
examples/project-4/: README.md
examples/project-4/src/: baz.cpp  code.cpp
examples/project-5/: Makefile  README.md
examples/project-5/include/project-5/: baz.h
examples/project-5/include/project5/: qux.h
examples/project-5/src/: baz.cpp  code.cpp  qux.cpp
examples/project-6/: CMakeLists.txt  README.md
examples/project-6/src/: baz.cpp  code.cpp  qux.cpp
examples/project-7/: README.md
examples/project-7/project-7-bin/: CMakeLists.txt  README.md
examples/project-7/project-7-bin/cmake_modules/: Findproject7lib.cmake
examples/project-7/project-7-bin/src/: code.cpp
examples/project-7/project-7-lib/: CMakeLists.txt  README.md
examples/project-7/project-7-lib/cmake_modules/: Findproject7lib.cmake
examples/project-7/project-7-lib/src/: baz.cpp  qux.cpp
